# kinectosc

./: .gitignore  Cargo.toml  calibration_profile.json
calibrator/: Cargo.toml
calibrator/src/: calibration.rs  calibrator.rs  main.rs
k4a/: Cargo.toml
k4a/src/: body.rs  calibration.rs  capture.rs  device.rs  device_configuration.rs  error.rs  frame.rs  lib.rs  playback.rs  tracker.rs  tracker_configuration.rs
kinectosc/: Cargo.toml
kinectosc/src/: active_sensor.rs  calibration.rs  conv.rs  filter.rs  kinect.rs  main.rs  osc.rs  profile_provider.rs
libk4a-sys/: Cargo.toml  build.rs  wrapper.h
libk4a-sys/src/: lib.rs
