[package]
name = "calibrator"
version = "0.1.0"
authors = ["koba789 <kobahide789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openvr = "0.6"
nalgebra = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.3"
